# SPH-TreeCode-Simulation

./: .gitignore  CMakeLists.txt
app/: testAnimation.cpp  testKernel.cpp
inc/: animation.hpp  frame.hpp  kernel.hpp  particle.hpp  particleSet.hpp
lib/tintoretto/: colored_string.hpp  mutable.hpp
src/: animation.cpp  kernel.cpp  particle.cpp  particleSet.cpp
